feat: implement phase one distribution assets