@@ -2,22 +2,23 @@ package com.drinkmall.service.admin.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import com.drinkmall.common.BusinessException;
+import com.drinkmall.entity.AssetLog;
 import com.drinkmall.entity.BalanceLog;
 import com.drinkmall.entity.PointsLog;
-import com.drinkmall.entity.User;
+import com.drinkmall.entity.RewardRecord;
 import com.drinkmall.entity.Withdrawal;
+import com.drinkmall.enums.AssetType;
 import com.drinkmall.mapper.BalanceLogMapper;
 import com.drinkmall.mapper.PointsLogMapper;
-import com.drinkmall.mapper.UserMapper;
 import com.drinkmall.mapper.WithdrawalMapper;
+import com.drinkmall.service.AssetService;
+import com.drinkmall.service.RewardService;
+import com.drinkmall.service.WithdrawalService;
 import com.drinkmall.service.admin.AdminFinanceService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -27,75 +28,51 @@ public class AdminFinanceServiceImpl implements AdminFinanceService {
 
     private final WithdrawalMapper withdrawalMapper;
     private final PointsLogMapper pointsLogMapper;
-    private final UserMapper userMapper;
     private final BalanceLogMapper balanceLogMapper;
+    private final AssetService assetService;
+    private final RewardService rewardService;
+    private final WithdrawalService withdrawalService;
 
     @Override
     public Page<Withdrawal> getWithdrawals(String status, Integer page, Integer size) {
-        Page<Withdrawal> pageParam = new Page<>(page, size);
-        LambdaQueryWrapper<Withdrawal> wrapper = new LambdaQueryWrapper<Withdrawal>().orderByDesc(Withdrawal::getCreatedAt);
-        if (status != null) wrapper.eq(Withdrawal::getStatus, status);
-        return withdrawalMapper.selectPage(pageParam, wrapper);
+        return withdrawalService.listAdmin(status, page, size);
     }
 
     @Override
-    @Transactional
-    public void approveWithdrawal(Long withdrawalId) {
-        Withdrawal withdrawal = withdrawalMapper.selectById(withdrawalId);
-        if (withdrawal == null) throw new BusinessException(404, "提现申请不存在");
-        if (!"pending".equals(withdrawal.getStatus())) throw new BusinessException(400, "该申请已处理");
-        withdrawal.setStatus("approved");
-        withdrawal.setProcessedAt(LocalDateTime.now());
-        withdrawalMapper.updateById(withdrawal);
-        User user = userMapper.selectById(withdrawal.getUserId());
-        if (user != null) {
-            BigDecimal newBalance = user.getBalance().subtract(withdrawal.getAmount());
-            user.setBalance(newBalance);
-            userMapper.updateById(user);
-        }
+    public void approveWithdrawal(Long withdrawalId, Long adminId, String offlineTransferNo) {
+        withdrawalService.approve(withdrawalId, adminId, offlineTransferNo);
     }
 
     @Override
-    @Transactional
-    public void rejectWithdrawal(Long withdrawalId, String reason) {
-        Withdrawal withdrawal = withdrawalMapper.selectById(withdrawalId);
-        if (withdrawal == null) throw new BusinessException(404, "提现申请不存在");
-        if (!"pending".equals(withdrawal.getStatus())) throw new BusinessException(400, "该申请已处理");
-        withdrawal.setStatus("rejected");
-        withdrawal.setRejectReason(reason);
-        withdrawal.setProcessedAt(LocalDateTime.now());
-        withdrawalMapper.updateById(withdrawal);
-        User user = userMapper.selectById(withdrawal.getUserId());
-        if (user != null && user.getFrozenBalance() != null) {
-            user.setBalance(user.getBalance().add(withdrawal.getAmount()));
-            user.setFrozenBalance(user.getFrozenBalance().subtract(withdrawal.getAmount()));
-            userMapper.updateById(user);
-        }
+    public void rejectWithdrawal(Long withdrawalId, Long adminId, String reason) {
+        withdrawalService.reject(withdrawalId, adminId, reason);
     }
 
     @Override
     public Page<Map<String, Object>> getBalanceLogs(Long userId, Integer page, Integer size) {
         Page<BalanceLog> pageParam = new Page<>(page, size);
         LambdaQueryWrapper<BalanceLog> wrapper = new LambdaQueryWrapper<BalanceLog>()
-            .orderByDesc(BalanceLog::getCreatedAt);
-        if (userId != null) wrapper.eq(BalanceLog::getUserId, userId);
+                .orderByDesc(BalanceLog::getCreatedAt);
+        if (userId != null) {
+            wrapper.eq(BalanceLog::getUserId, userId);
+        }
         Page<BalanceLog> logs = balanceLogMapper.selectPage(pageParam, wrapper);
 
         Page<Map<String, Object>> result = new Page<>(page, size);
         result.setTotal(logs.getTotal());
         result.setRecords(logs.getRecords().stream().map(log -> {
-            Map<String, Object> m = new HashMap<>();
-            m.put("id", log.getId());
-            m.put("userId", log.getUserId());
-            m.put("changeType", log.getChangeType());
-            m.put("amount", log.getAmount());
-            m.put("beforeBalance", log.getBeforeBalance());
-            m.put("afterBalance", log.getAfterBalance());
-            m.put("orderId", log.getOrderId());
-            m.put("remark", log.getRemark());
-            m.put("createdAt", log.getCreatedAt());
-            return m;
-        }).collect(java.util.stream.Collectors.toList()));
+            Map<String, Object> item = new HashMap<>();
+            item.put("id", log.getId());
+            item.put("userId", log.getUserId());
+            item.put("changeType", log.getChangeType());
+            item.put("amount", log.getAmount());
+            item.put("beforeBalance", log.getBeforeBalance());
+            item.put("afterBalance", log.getAfterBalance());
+            item.put("orderId", log.getOrderId());
+            item.put("remark", log.getRemark());
+            item.put("createdAt", log.getCreatedAt());
+            return item;
+        }).toList());
         return result;
     }
 
@@ -103,8 +80,25 @@ public class AdminFinanceServiceImpl implements AdminFinanceService {
     public Page<PointsLog> getPointsLogs(Long userId, Integer page, Integer size) {
         Page<PointsLog> pageParam = new Page<>(page, size);
         LambdaQueryWrapper<PointsLog> wrapper = new LambdaQueryWrapper<PointsLog>().orderByDesc(PointsLog::getCreatedAt);
-        if (userId != null) wrapper.eq(PointsLog::getUserId, userId);
+        if (userId != null) {
+            wrapper.eq(PointsLog::getUserId, userId);
+        }
         return pointsLogMapper.selectPage(pageParam, wrapper);
+    }
+
+    @Override
+    public Page<AssetLog> getAssetLogs(Long userId, AssetType assetType, Integer page, Integer size) {
+        return assetService.getLogs(userId, assetType, page, size);
+    }
+
+    @Override
+    public Page<RewardRecord> getRewardRecords(Long userId, String status, Integer page, Integer size) {
+        return rewardService.getRecords(userId, status, page, size);
+    }
+
+    @Override
+    public void adjustAsset(Long adminId, Long userId, AssetType assetType, BigDecimal amount, String reason) {
+        assetService.adminAdjust(adminId, userId, assetType, amount, reason);
     }
 
     @Override
